@@ -55,13 +55,6 @@ $param1_sec_count = array(
 		'T' => T_ZBX_INT // type
 	)
 );
-$param1_sec_count_no_timeshift = array(
-	array(
-		'C' => _('Last of').' (T)', // caption
-		'T' => T_ZBX_INT, // type
-		'M' => $metrics // metrcis
-	)
-);
 $param1_sec = array(
 	array(
 		'C' => _('Last of').' (T)', // caption
@@ -74,24 +67,34 @@ $param1_str = array(
 		'T' => T_ZBX_STR
 	)
 );
-$param2_sec_val = array(
+$param2_sec_count = array(
+	array(
+		'C' => 'V', // caption
+		'T' => T_ZBX_STR
+	),
 	array(
 		'C' => _('Last of').' (T)', // caption
-		'T' => T_ZBX_INT
-	),
-	array(
-		'C' => 'V', // caption
-		'T' => T_ZBX_STR
+		'T' => T_ZBX_INT, // type
+		'M' => $metrics // metrcis
 	)
 );
-$param2_val_sec = array(
+$param3_sec_val = array(
+	array(
+		'C' => _('Last of').' (T)', // caption
+		'T' => T_ZBX_INT, // type
+		'M' => $metrics // metrcis
+	),
 	array(
 		'C' => 'V', // caption
 		'T' => T_ZBX_STR
 	),
 	array(
-		'C' => _('Last of') . ' (T)', // caption
-		'T' => T_ZBX_INT
+		'C' => 'O', // caption
+		'T' => T_ZBX_STR
+	),
+	array(
+		'C' => _('Time shift').' ', // caption
+		'T' => T_ZBX_INT // type
 	)
 );
 $allowed_types_any = array(
@@ -188,23 +191,23 @@ $functions = array(
 		'allowed_types' => $allowed_types_any
 	),
 	'count[<]' => array(
-		'description' =>  _('Number of successfully retrieved values V of a period T is > N'),
-		'params' => $param2_sec_val,
+		'description' =>  _('Number of successfully retrieved values V (which fulfill operator O) for period of time T > N'),
+		'params' => $param3_sec_val,
 		'allowed_types' => $allowed_types_any
 	),
 	'count[>]' => array(
-		'description' =>  _('Number of successfully retrieved values V of a period T is < N'),
-		'params' => $param2_sec_val,
+		'description' =>  _('Number of successfully retrieved values V (which fulfill operator O) for period of time T < N'),
+		'params' => $param3_sec_val,
 		'allowed_types' => $allowed_types_any
 	),
 	'count[=]' => array(
-		'description' =>  _('Number of successfully retrieved values V of a period T is = N'),
-		'params' => $param2_sec_val,
+		'description' =>  _('Number of successfully retrieved values V (which fulfill operator O) for period of time T = N'),
+		'params' => $param3_sec_val,
 		'allowed_types' => $allowed_types_any
 	),
 	'count[#]' => array(
-		'description' =>  _('Number of successfully retrieved values V of a period T is NOT N'),
-		'params' => $param2_sec_val,
+		'description' =>  _('Number of successfully retrieved values V (which fulfill operator O) for period of time T NOT N'),
+		'params' => $param3_sec_val,
 		'allowed_types' => $allowed_types_any
 	),
 	'diff[=]' => array(
@@ -292,14 +295,14 @@ $functions = array(
 		'allowed_types' => $allowed_types_any
 	),
 	'str[=]' => array(
-		'description' =>  _('Find string T in last (most recent) value. N = 1 - if found, 0 - otherwise'),
-		'params' => $param1_str,
-		'allowed_types' => $allowed_types_str
+		'description' =>  _('Find string V in last (most recent) value. N = 1 - if found, 0 - otherwise'),
+		'params' => $param2_sec_count,
+		'allowed_types' => $allowed_types_any
 	),
 	'str[#]' => array(
-		'description' =>  _('Find string T in last (most recent) value. N NOT 1 - if found, 0 - otherwise'),
-		'params' => $param1_str,
-		'allowed_types' => $allowed_types_str
+		'description' =>  _('Find string V in last (most recent) value. N NOT 1 - if found, 0 - otherwise'),
+		'params' => $param2_sec_count,
+		'allowed_types' => $allowed_types_any
 	),
 	'strlen[<]' => array(
 		'description' =>  _('Length of last (most recent) T value in characters is < N'),
@@ -391,33 +394,33 @@ $functions = array(
 	),
 	'fuzzytime[=]' => array(
 		'description' =>  _('Timestamp not different from Zabbix server time for more than T seconds, then N = 1, 0 - otherwise'),
-		'params' => $param1_sec_count_no_timeshift,
-		'allowed_types' => $allowed_types_numeric
+		'params' => $param1_sec,
+		'allowed_types' => $allowed_types_any
 	),
 	'fuzzytime[#]' => array(
 		'description' =>  _('Timestamp not different from Zabbix server time for more than T seconds, then N NOT 1, 0 - otherwise'),
-		'params' => $param1_sec_count_no_timeshift,
-		'allowed_types' => $allowed_types_numeric
+		'params' => $param1_sec,
+		'allowed_types' => $allowed_types_any
 	),
 	'regexp[=]' => array(
 		'description' =>  _('Regular expression V matching last value in period T, then N = 1, 0 - otherwise'),
-		'params' => $param2_val_sec,
-		'allowed_types' => $allowed_types_str
+		'params' => $param2_sec_count,
+		'allowed_types' => $allowed_types_any
 	),
 	'regexp[#]' => array(
 		'description' =>  _('Regular expression V matching last value in period T, then N NOT 1, 0 - otherwise'),
-		'params' => $param2_val_sec,
-		'allowed_types' => $allowed_types_str
+		'params' => $param2_sec_count,
+		'allowed_types' => $allowed_types_any
 	),
 	'iregexp[=]' => array(
 		'description' =>  _('Regular expression V matching last value in period T, then N = 1, 0 - otherwise (non case-sensitive)'),
-		'params' => $param2_val_sec,
-		'allowed_types' => $allowed_types_str
+		'params' => $param2_sec_count,
+		'allowed_types' => $allowed_types_any
 	),
 	'iregexp[#]' => array(
 		'description' =>  _('Regular expression V matching last value in period T, then N NOT 1, 0 - otherwise (non case-sensitive)'),
-		'params' => $param2_val_sec,
-		'allowed_types' => $allowed_types_str
+		'params' => $param2_sec_count,
+		'allowed_types' => $allowed_types_any
 	),
 	'logeventid[=]' => array(
 		'description' =>  _('Event ID of last log entry matching regular expression T, then N = 1, 0 - otherwise'),
